plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.11'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.epages.restdocs-api-spec' version '0.18.4'
    id 'org.hidetake.swagger.generator' version '2.18.2'
}

group = 'com.prography'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

def snippetsDir = file("build/generated-snippets")

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // DB
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.security:spring-security-test'

    // h2
    runtimeOnly 'com.h2database:h2'

    // mysql
    runtimeOnly 'com.mysql:mysql-connector-j'

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // spring security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // feign
    implementation "org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3"
    implementation 'io.github.openfeign:feign-jackson:12.1'

    // spring validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // swagger & restdocs
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'com.epages:restdocs-api-spec-mockmvc:0.18.4'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // annotation
    implementation 'org.hibernate.validator:hibernate-validator'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // SMS
    implementation 'net.nurigo:sdk:4.3.2'

    // configuration
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // JWT for apple login
    implementation 'com.auth0:java-jwt:4.4.0'
}

tasks.named('test') {
    useJUnitPlatform()
    outputs.dir snippetsDir
    finalizedBy("openapi3")
}

openapi3 {
    servers = [
            { url = 'http://localhost:8080' }
    ]
    title = 'Light On API'
    description = 'Light On API 명세서'
    version = '1.0.0'
    format = 'json'
}

tasks.register('copyOpenApiSpec', Copy) {
    dependsOn 'openapi3'
    from "$buildDir/api-spec/openapi3.json"
    into "$projectDir/src/main/resources/static/docs"
}

tasks.named("build") {
    finalizedBy("copyOpenApiSpec")
}


